@@ -43,9 +43,9 @@ public class AccessPoint {
 		Node serverNode = ParserUtils.getChildNodeWithTag(apNode, "Server");
 		
 		if (serverNode == null)
-			throw new SclParserException(apNode, "AccessPoint has no server defined!");
-			
-		this.server = new Server(serverNode, typeDeclarations);
+			this.server = null;
+		else
+		    this.server = new Server(serverNode, typeDeclarations);
 		
 	}
 
